Doc: Updated README file

--- a/EDA_Covid_Vaccination.ipynb
+++ b/EDA_Covid_Vaccination.ipynb
@@ -27,17 +27,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0.5\n",
+      "1.18.5\n",
+      "3.2.2\n",
+      "0.11.1\n",
+      "0.23.1\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
+    "import matplotlib\n",
     "import seaborn as sns\n",
-    "from sklearn.linear_model import LinearRegression"
+    "from sklearn.linear_model import LinearRegression\n",
+    "import sklearn\n",
+    "print(pd.__version__)\n",
+    "print(np.__version__)\n",
+    "print(matplotlib.__version__)\n",
+    "print(sns.__version__)\n",
+    "print(sklearn.__version__)"
    ]
   },
   {
