Doc: Updated README

--- a/EDA_Covid_Vaccination.ipynb
+++ b/EDA_Covid_Vaccination.ipynb
@@ -641,6 +641,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why the rows with missing values can be dropped:\n",
+    "\n",
+    "This approach was applied because the values for 'total_vaccinations','daily_vaccinations' and 'GDP_per_Capita' are the central focus of the analysis.\n",
+    "Rows that do not contain these values will not be included in the analysis and can therefore be dropped."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
